TMS Attributes management: 2 part - batch patch test case attributes